[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryx"
dynamic = ["version"]
description = "Cognitive Memory Operating System — Production-grade long-term memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "luckyl214"}
]
keywords = ["memory", "cognition", "agent", "llm", "hermes", "vector-store", "sqlite", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.14.0,<4.0",
    "pydantic>=2.0",
    "structlog>=23.0",
    "prometheus-client>=0.16.0",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.136.3",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "black>=26.5.1",
    "ruff>=0.1.0",
    "mypy>=2.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.24.0",
]
lancedb = ["lancedb>=0.19.0", "numpy>=1.26.0"]

[project.urls]
Homepage = "https://github.com/luckyl214/memoryx"
Repository = "https://github.com/luckyl214/memoryx.git"
Documentation = "https://github.com/luckyl214/memoryx#readme"
Changelog = "https://github.com/luckyl214/memoryx/blob/main/CHANGELOG.md"
Issues = "https://github.com/luckyl214/memoryx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memoryx", "memoryx.*"]
exclude = ["memoryx-pure-release*"]

[tool.setuptools.package-data]
memoryx = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "memoryx._version.__version__"}

[project.scripts]
memoryx = "memoryx.cli.doctor:main"
