[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryx"
dynamic = ["version"]
description = "Long-term memory system for AI agents with hybrid retrieval, cognitive models, and Hermes Agent integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "luckyl214"},
]
keywords = [
    "memory", "cognition", "agent", "llm", "hermes",
    "ai-memory", "cognitive-architecture", "sqlite",
    "ebbinghaus", "working-memory", "knowledge-graph",
    "mcp", "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiohttp>=3.14.0,<4.0",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
    "prometheus-client>=0.16.0",
    "pydantic-settings>=2.14.1",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "fastapi>=0.115.0",
    "httpx2>=0.1",
    "uvicorn[standard]>=0.34.0",
]
vector = [
    "lancedb>=0.12",
    "sentence-transformers>=3.0",
]
mcp = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/luckyLo99/memoryx"
Repository = "https://github.com/luckyLo99/memoryx"
Documentation = "https://github.com/luckyLo99/memoryx/tree/main/docs"
Changelog = "https://github.com/luckyLo99/memoryx/blob/main/CHANGELOG.md"
Issues = "https://github.com/luckyLo99/memoryx/issues"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ["memoryx", "memoryx.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["memoryx-pure-release", "reports", "artifacts", ".git", ".venv", "dist", "build", "scripts"]
markers = [
    "benchmark: competitive benchmark tests",
    "slow: tests that may need network or heavy compute",
]

[tool.coverage.run]
source = ["memoryx"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
